--- a/repast-admin/src/main/resources/templates/include.html
+++ b/repast-admin/src/main/resources/templates/include.html
@@ -41,5 +41,7 @@
 	<script th:src="@{/aaa/js/common.js?v=3.1.0}"></script>
 	<script th:src="@{/aaa/js/dd-ui.js?v=3.1.0}"></script>
 	<script src="http://tajs.qq.com/stats?sId=62048022"></script>
-	<script th:inline="javascript"> var ctx = [[@{/}]]; </script>
+	<script th:inline="javascript">
+	var ctx = [[@{/}]];
+	</script>
 </div>
