--- a/repast-admin/src/main/resources/templates/system/order/order.html
+++ b/repast-admin/src/main/resources/templates/system/order/order.html
@@ -11,19 +11,10 @@
 					<div class="select-list">
 						<ul>
 							<li>
-								：<input type="text" name="memberId"/>
+								会员ID：<input type="text" name="MemberId"/>
 							</li>
-
 							<li>
-								：<input type="text" name="shopId"/>
-							</li>
-
-							<li>
-								拼团活动ID：<input type="text" name="groupPromotionId"/>
-							</li>
-
-							<li>
-								促销活动ID：<input type="text" name="couponId"/>
+								店铺ID：<input type="text" name="shopId"/>
 							</li>
 
 							<li>
@@ -31,40 +22,9 @@
 							</li>
 
 							<li>
-								提交时间：<input type="text" name="createTime"/>
-							</li>
-
-							<li>
 								用户帐号：<input type="text" name="memberUsername"/>
 							</li>
 
-							<li>
-								订单总金额：<input type="text" name="totalAmount"/>
-							</li>
-
-							<li>
-								应付金额（实际支付金额）：<input type="text" name="payAmount"/>
-							</li>
-
-							<li>
-								运费金额：<input type="text" name="freightAmount"/>
-							</li>
-
-							<li>
-								促销优化金额（促销价、满减、阶梯价）：<input type="text" name="promotionAmount"/>
-							</li>
-
-							<li>
-								积分抵扣金额：<input type="text" name="integrationAmount"/>
-							</li>
-
-							<li>
-								优惠券抵扣金额：<input type="text" name="couponAmount"/>
-							</li>
-
-							<li>
-								管理员后台调整订单使用的折扣金额：<input type="text" name="discountAmount"/>
-							</li>
 
 							<li>
 								支付方式：0->未支付；1->支付宝；2->微信：<input type="text" name="payType"/>
@@ -83,59 +43,7 @@
 							</li>
 
 							<li>
-								物流公司(配送方式)：<input type="text" name="deliveryCompany"/>
-							</li>
-
-							<li>
 								物流单号：<input type="text" name="deliverySn"/>
-							</li>
-
-							<li>
-								自动确认时间（天）：<input type="text" name="autoConfirmDay"/>
-							</li>
-
-							<li>
-								可以获得的积分：<input type="text" name="integration"/>
-							</li>
-
-							<li>
-								可以活动的成长值：<input type="text" name="growth"/>
-							</li>
-
-							<li>
-								活动信息：<input type="text" name="promotionInfo"/>
-							</li>
-
-							<li>
-								发票类型：0->不开发票；1->电子发票；2->纸质发票：<input type="text" name="billType"/>
-							</li>
-
-							<li>
-								发票抬头：<input type="text" name="billHeader"/>
-							</li>
-
-							<li>
-								发票内容：<input type="text" name="billContent"/>
-							</li>
-
-							<li>
-								收票人电话：<input type="text" name="billReceiverPhone"/>
-							</li>
-
-							<li>
-								收票人邮箱：<input type="text" name="billReceiverEmail"/>
-							</li>
-
-							<li>
-								收货人姓名：<input type="text" name="receiverName"/>
-							</li>
-
-							<li>
-								收货人电话：<input type="text" name="receiverPhone"/>
-							</li>
-
-							<li>
-								收货人邮编：<input type="text" name="receiverPostCode"/>
 							</li>
 
 							<li>
@@ -151,43 +59,11 @@
 							</li>
 
 							<li>
-								详细地址：<input type="text" name="receiverDetailAddress"/>
-							</li>
-
-							<li>
-								订单备注：<input type="text" name="note"/>
-							</li>
-
-							<li>
 								确认收货状态：0->未确认；1->已确认：<input type="text" name="confirmStatus"/>
-							</li>
-
-							<li>
-								删除状态：0->未删除；1->已删除：<input type="text" name="deleteStatus"/>
-							</li>
-
-							<li>
-								下单时使用的积分：<input type="text" name="useIntegration"/>
-							</li>
-
-							<li>
-								支付时间：<input type="text" name="paymentTime"/>
-							</li>
-
-							<li>
-								发货时间：<input type="text" name="deliveryTime"/>
-							</li>
-
-							<li>
-								确认收货时间：<input type="text" name="receiveTime"/>
-							</li>
-
-							<li>
-								评价时间：<input type="text" name="commentTime"/>
-							</li>
-
-							<li>
-								修改时间：<input type="text" name="modifyTime"/>
+								<select name="confirmStatus" th:with="type=${@dict.getType('sys_normal_disable')}">
+									<option value="">所有</option>
+									<option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>
+								</select>
 							</li>
 
 							<li>
@@ -200,7 +76,7 @@
 			</div>
 			
 	        <div class="btn-group-sm hidden-xs" id="toolbar" role="group">
-				<a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="system:order:add">
+				<a class="btn btn-success disabled" onclick="$.operate.add()" shiro:hasPermission="system:order:add">
 					<i class="fa fa-plus"></i> 添加
 				</a>
 				<a class="btn btn-primary btn-edit disabled" onclick="$.operate.edit()" shiro:hasPermission="system:order:edit">
@@ -244,12 +120,12 @@
 				},
 				{
 					field : 'memberId', 
-					title : '',
+					title : '会员Id',
 					sortable: true
 				},
 				{
 					field : 'shopId', 
-					title : '',
+					title : '商品Id',
 					sortable: true
 				},
 				{
@@ -314,23 +190,69 @@
 				},
 				{
 					field : 'payType', 
-					title : '支付方式：0->未支付；1->支付宝；2->微信',
-					sortable: true
+					title : '支付方式：',
+					sortable: true,
+					formatter: function(value, row, index) {
+						var actions=[];
+						if (0==row.payType){
+							actions.push('未支付');
+						}else if(1==row.payType){
+							actions.push('支付宝');
+						}else if(3==row.payType){
+							actions.push('微信');
+						}
+						return actions;
+					}
 				},
 				{
 					field : 'sourceType', 
-					title : '订单来源：0->PC订单；1->app订单',
-					sortable: true
+					title : '订单来源：',
+					sortable: true,
+					formatter: function(value, row, index) {
+						var actions=[];
+						if (0==row.sourceType){
+							actions.push('PC订单');
+						}else if(1==row.sourceType){
+							actions.push('app订单');
+						}
+						return actions;
+					}
 				},
 				{
 					field : 'status', 
-					title : '订单状态：0->待付款；1->待发货；2->已发货；3->已完成；4->已关闭；5->无效订单',
-					sortable: true
+					title : '订单状态：',
+					sortable: true,
+					formatter: function(value, row, index) {
+						var actions=[];
+						if (0==row.status){
+							actions.push('待付款');
+						}else if(1==row.status){
+							actions.push('待发货');
+						}else if(2==row.status){
+							actions.push('已发货');
+						}else if(3==row.status){
+							actions.push('已完成');
+						}else if(4==row.status){
+							actions.push('已关闭');
+						}else if(5==row.status){
+							actions.push('无效订单');
+						}
+						return actions;
+					}
 				},
 				{
 					field : 'orderType', 
-					title : '订单类型：0->正常订单；1->秒杀订单',
-					sortable: true
+					title : '订单类型：',
+					sortable: true,
+					formatter: function(value, row, index) {
+						var actions=[];
+						if (0==row.orderType){
+							actions.push('正常订单');
+						}else if(1==row.orderType){
+							actions.push('秒杀订单');
+						}
+						return actions;
+					}
 				},
 				{
 					field : 'deliveryCompany', 
@@ -364,8 +286,19 @@
 				},
 				{
 					field : 'billType', 
-					title : '发票类型：0->不开发票；1->电子发票；2->纸质发票',
-					sortable: true
+					title : '发票类型：',
+					sortable: true,
+					formatter: function(value, row, index) {
+						var actions=[];
+						if (0==row.billType){
+							actions.push('不开发票');
+						}else if(1==row.billType){
+							actions.push('电子发票');
+						}else if(2==row.billType){
+							actions.push('纸质发票');
+						}
+						return actions;
+					}
 				},
 				{
 					field : 'billHeader', 
@@ -429,13 +362,31 @@
 				},
 				{
 					field : 'confirmStatus', 
-					title : '确认收货状态：0->未确认；1->已确认',
-					sortable: true
+					title : '确认收货状态:',
+					sortable: true,
+					formatter: function(value, row, index) {
+						var actions=[];
+						if (0==row.confirmStatus){
+							actions.push('未确认');
+						}else if(1==row.confirmStatus){
+							actions.push('已确认');
+						}
+						return actions;
+					}
 				},
 				{
 					field : 'deleteStatus', 
-					title : '删除状态：0->未删除；1->已删除',
-					sortable: true
+					title : '删除状态：',
+					sortable: true,
+					formatter: function(value, row, index) {
+						var actions=[];
+						if (0==row.deleteStatus){
+							actions.push('未删除');
+						}else if(1==row.deleteStatus){
+							actions.push('已删除');
+						}
+						return actions;
+					}
 				},
 				{
 					field : 'useIntegration', 
@@ -463,7 +414,7 @@
 					sortable: true
 				},
 				{
-					field : 'modifyTime', 
+					field : 'modifyTime',
 					title : '修改时间',
 					sortable: true
 				},
