--- a/repast-admin/src/main/resources/templates/system/order/order.html
+++ b/repast-admin/src/main/resources/templates/system/order/order.html
@@ -60,11 +60,12 @@
 
 							<li>
 								确认收货状态：0->未确认；1->已确认：<input type="text" name="confirmStatus"/>
-								<select name="confirmStatus" th:with="type=${@dict.getType('sys_normal_disable')}">
-									<option value="">所有</option>
-									<option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>
-								</select>
+<!--								<select name="confirmStatus" th:with="type=${@dict.getType('sys_normal_disable')}">-->
+<!--									<option value="">所有</option>-->
+<!--									<option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>-->
+<!--								</select>-->
 							</li>
+
 
 							<li>
 								<a class="btn btn-primary btn-rounded btn-sm" onclick="$.table.search()"><i class="fa fa-search"></i>&nbsp;搜索</a>
@@ -414,7 +415,7 @@
 					sortable: true
 				},
 				{
-					field : 'modifyTime',
+					field : 'modtxifyTime',
 					title : '修改时间',
 					sortable: true
 				},
@@ -425,12 +426,19 @@
 		            	var actions = [];
 		            	actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="#" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
                         actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="#" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
+                        actions.push('<a class="btn btn-warning btn-xs ' + removeFlag + '" href="#" onclick="selectDetails(\'' + row.orderSn + '\')">详情</a>');
 						return actions.join('');
 		            }
 		        }]
             };
+
             $.table.init(options);
         });
+
+		function selectDetails(id) {
+			$.modal.open("查询" + $.table._option.modalName+"详情", prefix+"/selectDetails/"+id+"");
+
+		}
     </script>
 </body>
 </html>
